--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,47 @@
 [versions]
 agp = "8.5.0"
+androidxJunit = "1.1.3"
+appcompatVersion = "1.3.1"
+espressoCoreVersion = "3.4.0"
+gradle = "7.0.4"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
+kotlinGradlePlugin = "1.6.10"
+kotlinStdlib = "1.9.22"
 material = "1.12.0"
 leanback = "1.0.0"
 glide = "4.11.0"
+materialVersion = "1.4.0"
+realmGradlePlugin = "10.10.1"
+recyclerview = "1.3.2"
+junitJunit = "4.13.2"
+monitor = "1.7.1"
+recyclerviewVersion = "1.2.1"
 
 [libraries]
+#noinspection SimilarGradleDependency
+appcompat-v131 = { module = "androidx.appcompat:appcompat", version.ref = "appcompatVersion" }
+espresso-core-v340 = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCoreVersion" }
+gradle = { module = "com.android.tools.build:gradle", version.ref = "gradle" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+junit-v113 = { module = "androidx.test.ext:junit", version.ref = "androidxJunit" }
+kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlinGradlePlugin" }
+kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlinStdlib" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 leanback = { group = "androidx.leanback", name = "leanback", version.ref = "leanback" }
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
+material-v140 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
+realm-gradle-plugin = { module = "io.realm:realm-gradle-plugin", version.ref = "realmGradlePlugin" }
+recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
+#noinspection SimilarGradleDependency
+junit-junit = { group = "junit", name = "junit", version.ref = "junitJunit" }
+monitor = { group = "androidx.test", name = "monitor", version.ref = "monitor" }
+recyclerview-v121 = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerviewVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
