--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,28 @@
 [versions]
 agp = "8.5.0"
+androidxAppcompat = "1.4.1"
 androidxJunit = "1.1.3"
 appcompatVersion = "1.3.1"
+coreKtx = "1.13.1"
 espressoCoreVersion = "3.4.0"
+googleMaterial = "1.2.0"
 gradle = "7.0.4"
+gradleVersion = "8.0.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
-kotlinGradlePlugin = "1.6.10"
+kotlinGradlePlugin = "1.6.20"
+kotlinGradlePluginVersion = " 1.8.0"
 kotlinStdlib = "1.9.22"
+kotlinStdlibVersion = "1.8.0"
+kotlinxCollectionsImmutableJvm = "0.3.4"
+kotlinxParcelizeRuntime = "1.3.1"
 material = "1.12.0"
 leanback = "1.0.0"
 glide = "4.11.0"
 materialVersion = "1.4.0"
+mongodbDriverSync = "4.2.3"
 realmGradlePlugin = "10.10.1"
 recyclerview = "1.3.2"
 junitJunit = "4.13.2"
@@ -23,19 +32,29 @@ recyclerviewVersion = "1.2.1"
 [libraries]
 #noinspection SimilarGradleDependency
 appcompat-v131 = { module = "androidx.appcompat:appcompat", version.ref = "appcompatVersion" }
+appcompat-v141 = { module = "androidx.appcompat:appcompat", version.ref = "androidxAppcompat" }
+core-ktx = { module = "androidx.core:core-ktx", version.ref = "coreKtx" }
 espresso-core-v340 = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCoreVersion" }
 gradle = { module = "com.android.tools.build:gradle", version.ref = "gradle" }
+gradle-v800 = { module = "com.android.tools.build:gradle", version.ref = "gradleVersion" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 junit-v113 = { module = "androidx.test.ext:junit", version.ref = "androidxJunit" }
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlinGradlePlugin" }
+kotlin-gradle-plugin-v180 = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlinGradlePluginVersion" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlinStdlib" }
+kotlin-stdlib-v180 = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlinStdlibVersion" }
+kotlinx-collections-immutable-jvm = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable-jvm", version.ref = "kotlinxCollectionsImmutableJvm" }
+kotlinx-parcelize-runtime = { module = "org.jetbrains.kotlinx:kotlinx-parcelize-runtime", version.ref = "kotlinxParcelizeRuntime" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 leanback = { group = "androidx.leanback", name = "leanback", version.ref = "leanback" }
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
+material-v120 = { module = "com.google.android.material:material", version.ref = "googleMaterial" }
 material-v140 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
+mongodb-driver-sync = { module = "org.mongodb:mongodb-driver-sync", version.ref = "mongodbDriverSync" }
+realm-android-library = { module = "io.realm:realm-android-library", version.ref = "realmGradlePlugin" }
 realm-gradle-plugin = { module = "io.realm:realm-gradle-plugin", version.ref = "realmGradlePlugin" }
 recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 #noinspection SimilarGradleDependency
